tensor variables and img folder

--- a/tensors-variables.ipynb
+++ b/tensors-variables.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "distinguished-consent",
+   "id": "composed-publication",
    "metadata": {},
    "source": [
     "# **Introduction to Tensors and Variables**\n",
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "positive-marketplace",
+   "id": "connected-field",
    "metadata": {},
    "source": [
     "## **Introduction**\n",
@@ -28,13 +28,752 @@
   },
   {
    "cell_type": "markdown",
-   "id": "generic-poultry",
+   "id": "usual-eclipse",
    "metadata": {},
    "source": [
     "## **Load necessary libraries**\n",
     "\n",
-    "We will start by "
+    "Import necessary libraries"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "formed-excerpt",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TensorFlow version: 2.4.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tensorflow as tf\n",
+    "import numpy as np\n",
+    "\n",
+    "print(\"TensorFlow version:\", tf.version.VERSION)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fluid-andrew",
+   "metadata": {},
+   "source": [
+    "## **Basic and advanced tensor concepts**\n",
+    "\n",
+    "### **Basics**\n",
+    "\n",
+    "Let's create some basic tensors. \n",
+    "\n",
+    "#### **Tensor objects**\n",
+    "A **scalar** is a rank-0 tensor. A scalar contains a single value, and no *axes*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "balanced-blowing",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(), dtype=int32, numpy=4>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# A scalar tensor contains a single value and no axes\n",
+    "rank_0_tensor = tf.constant(4)\n",
+    "rank_0_tensor"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ranging-struggle",
+   "metadata": {},
+   "source": [
+    "A **vector** is a rank-1 tensor. A vector is like a list of values, it has 1 axis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "touched-stage",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(3,), dtype=float32, numpy=array([2., 3., 4.], dtype=float32)>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# A vector tensor has 1 axis\n",
+    "rank_1_tensor = tf.constant([2.0, 3.0, 4.0])\n",
+    "rank_1_tensor"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "disabled-airline",
+   "metadata": {},
+   "source": [
+    "A **matrix** is a rank-2 tensor. It has 2 axes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "developed-spending",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(3, 2), dtype=float16, numpy=\n",
+       "array([[1., 2.],\n",
+       "       [3., 4.],\n",
+       "       [5., 6.]], dtype=float16)>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# A matrix tensor has 2 axes\n",
+    "# dtype can be specified at creation\n",
+    "rank_2_tensor = tf.constant([[1, 2],\n",
+    "                             [3, 4],\n",
+    "                             [5, 6]], dtype=tf.float16)\n",
+    "rank_2_tensor"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "qualified-auction",
+   "metadata": {},
+   "source": [
+    "<center><img src=\"img/tensors.png\" width=500 height=500></center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "compact-environment",
+   "metadata": {},
+   "source": [
+    "Tensors may have more axes, here is a tensor with 3 axes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "metallic-lending",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(3, 2, 5), dtype=int32, numpy=\n",
+       "array([[[ 0,  1,  2,  3,  4],\n",
+       "        [ 5,  6,  7,  8,  9]],\n",
+       "\n",
+       "       [[10, 11, 12, 13, 14],\n",
+       "        [15, 16, 17, 18, 19]],\n",
+       "\n",
+       "       [[20, 21, 22, 23, 24],\n",
+       "        [25, 26, 27, 28, 29]]], dtype=int32)>"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# There can be an arbitrary number of axes\n",
+    "rank_3_tensor = tf.constant([\n",
+    "    [[0, 1, 2, 3, 4],\n",
+    "     [5, 6, 7, 8, 9]],\n",
+    "    [[10, 11, 12, 13, 14],\n",
+    "     [15, 16, 17, 18, 19]],\n",
+    "    [[20, 21, 22, 23, 24],\n",
+    "     [25, 26, 27, 28, 29]]\n",
+    "])\n",
+    "\n",
+    "rank_3_tensor"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "increasing-manor",
+   "metadata": {},
+   "source": [
+    "Tensors with more than 2 axes can be visualised in many ways\n",
+    "\n",
+    "<center><img src=\"img/multi-tensors.png\" width=600 height=600></center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "facial-virginia",
+   "metadata": {},
+   "source": [
+    "A tensor can be converted to a NumPy array either using `np.array` or the `tensor.numpy` method."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "oriented-bryan",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 2.],\n",
+       "       [3., 4.],\n",
+       "       [5., 6.]], dtype=float16)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array(rank_2_tensor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "smart-luxury",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 2.],\n",
+       "       [3., 4.],\n",
+       "       [5., 6.]], dtype=float16)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rank_2_tensor.numpy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "atomic-locator",
+   "metadata": {},
+   "source": [
+    "Tensors often contain `float` and `int` types, but may have many other types, including:\n",
+    "- complex numbers\n",
+    "- strings\n",
+    "\n",
+    "The base `tf.Tensor` class requires tensors to be *rectangular* - that is, **along each axis, every element must be the same size**. However, some specialised types of tensors can handle different shapes:\n",
+    "- ragged tensors\n",
+    "- sparse tensors\n",
+    "\n",
+    "#### **Basic math**\n",
+    "\n",
+    "Basic math can be performed on tensors, including addition, element-wise multiplication, and matrix multiplication."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "coastal-pharmacology",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = tf.constant([[1, 2],\n",
+    "                 [3, 4]])\n",
+    "b = tf.constant([[1, 1],\n",
+    "                 [1, 1]])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "surprising-camel",
+   "metadata": {},
+   "source": [
+    "**Addition**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "decent-pierre",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor(\n",
+      "[[2 3]\n",
+      " [4 5]], shape=(2, 2), dtype=int32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tf.add(a, b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "about-expense",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor(\n",
+      "[[2 3]\n",
+      " [4 5]], shape=(2, 2), dtype=int32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a + b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eastern-indonesia",
+   "metadata": {},
+   "source": [
+    "**Element-wise multiplication**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "sharing-clothing",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor(\n",
+      "[[1 2]\n",
+      " [3 4]], shape=(2, 2), dtype=int32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tf.multiply(a, b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "collectible-reference",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor(\n",
+      "[[1 2]\n",
+      " [3 4]], shape=(2, 2), dtype=int32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a * b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "variable-daughter",
+   "metadata": {},
+   "source": [
+    "**Matrix multiplication**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "nervous-winner",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor(\n",
+      "[[3 3]\n",
+      " [7 7]], shape=(2, 2), dtype=int32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tf.matmul(a, b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "handled-chancellor",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor(\n",
+      "[[3 3]\n",
+      " [7 7]], shape=(2, 2), dtype=int32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a @ b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "quarterly-reception",
+   "metadata": {},
+   "source": [
+    "**Tensor ops**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "resident-paragraph",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(2, 2), dtype=float32, numpy=\n",
+       "array([[2.6894143e-01, 7.3105860e-01],\n",
+       "       [9.9987662e-01, 1.2339458e-04]], dtype=float32)>"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c = tf.constant([[4.0, 5.0], \n",
+    "                 [10.0, 1.0]])\n",
+    "\n",
+    "# Find the largest value\n",
+    "tf.reduce_max(c)\n",
+    "\n",
+    "# Find the INDEX of the largest value\n",
+    "tf.argmax(c)\n",
+    "\n",
+    "# Compute the softmax\n",
+    "tf.nn.softmax(c)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "attended-diana",
+   "metadata": {},
+   "source": [
+    "### **Tensor shapes**\n",
+    "\n",
+    "Tensors have shapes. Some vocabulary:\n",
+    "- **Shape** - Tuple storing the length of each of the dimensions of a tensor\n",
+    "- **Rank** - Number of tensor dimensions. A **scalar** is rank-0, a **vector** is rank-1, a **matrix** is rank-2\n",
+    "- **Axis** or **Dimension** - Lowest structure level of a tensor\n",
+    "- **Size** - Total number of the items in a tensor, its product shape vector\n",
+    "\n",
+    "Tensors and `tf.TensorShape` objects have convenient properties for accessing these.\n",
+    "\n",
+    "Note: although there may be references to *tensors of 2 dimensions*, a rank-2 tensor usually does not describe a 2D space."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "cellular-affect",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(3, 2, 4, 5), dtype=float32, numpy=\n",
+       "array([[[[0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 0., 0., 0.]],\n",
+       "\n",
+       "        [[0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 0., 0., 0.]]],\n",
+       "\n",
+       "\n",
+       "       [[[0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 0., 0., 0.]],\n",
+       "\n",
+       "        [[0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 0., 0., 0.]]],\n",
+       "\n",
+       "\n",
+       "       [[[0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 0., 0., 0.]],\n",
+       "\n",
+       "        [[0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 0., 0., 0.]]]], dtype=float32)>"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# `tf.zeros` creates a tensor with all elements set to 0\n",
+    "rank_4_tensor = tf.zeros([3, 2, 4, 5])\n",
+    "rank_4_tensor"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "instructional-undergraduate",
+   "metadata": {},
+   "source": [
+    "<center><img src=\"img/rank-4-tensor.png\" width=500 height=500><\\center>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "aerial-methodology",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Type of every element: <dtype: 'float32'>\n",
+      "Number of dimensions: 4\n",
+      "Shape of tensor: (3, 2, 4, 5)\n",
+      "Elements along axis 0 of tensor: 3\n",
+      "Elements along the last axis of tensor: 5\n",
+      "Total number of elements (3*2*4*5): 120\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Type of every element:\", rank_4_tensor.dtype)\n",
+    "print(\"Number of dimensions:\", rank_4_tensor.ndim)\n",
+    "print(\"Shape of tensor:\", rank_4_tensor.shape)\n",
+    "print(\"Elements along axis 0 of tensor:\", rank_4_tensor.shape[0])\n",
+    "print(\"Elements along the last axis of tensor:\", rank_4_tensor.shape[-1])\n",
+    "print(\"Total number of elements (3*2*4*5):\", tf.size(rank_4_tensor).numpy())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "universal-closer",
+   "metadata": {},
+   "source": [
+    "While axes are often referred to by their indices, you should always keep track of the meaning of each. **Axes are ordered from global to local**: \n",
+    "1. **batch** axis\n",
+    "2. **spatial** axes\n",
+    "3. **features** for each location\n",
+    "\n",
+    "This way feature vectors are contiguous regions of memory.\n",
+    "\n",
+    "<center><img src=\"img/tf-axes.png\" width=300 height=300><\\center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "suspended-block",
+   "metadata": {},
+   "source": [
+    "## **Single-axis and multi-axis indexing**\n",
+    "\n",
+    "### **Single-axis indexing**\n",
+    "\n",
+    "TensorFlow follows standard Python and NumPy indexing rules:\n",
+    "\n",
+    "- indexes start at `0`\n",
+    "- negative indices count backwards from the end\n",
+    "- colons `:` are used for slicing as `start:stop:step`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "impressed-exhaust",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0,  1,  1,  2,  3,  5,  8, 13, 21, 34], dtype=int32)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rank_1_tensor = tf.constant([0, 1, 1, 2, 3, 5, 8, 13, 21, 34])\n",
+    "rank_1_tensor.numpy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "prescription-upgrade",
+   "metadata": {},
+   "source": [
+    "Indexing with a scalar **removes the dimension**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "advised-builder",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First: 0\n",
+      "Second: 1\n",
+      "Last: 34\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"First:\", rank_1_tensor[0].numpy())\n",
+    "print(\"Second:\", rank_1_tensor[1].numpy())\n",
+    "print(\"Last:\", rank_1_tensor[-1].numpy())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "catholic-keyboard",
+   "metadata": {},
+   "source": [
+    "Indexing with a slice `:` **keeps the dimension**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "incorrect-hardwood",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Everything: [ 0  1  1  2  3  5  8 13 21 34]\n",
+      "Before 4:  [0 1 1 2]\n",
+      "From 4 to the end: [ 3  5  8 13 21 34]\n",
+      "From 2, before 7: [1 2 3 5 8]\n",
+      "Every other item: [ 0  1  3  8 21]\n",
+      "Reversed: [34 21 13  8  5  3  2  1  1  0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Everything:\", rank_1_tensor[:].numpy())\n",
+    "print(\"Before 4: \", rank_1_tensor[:4].numpy())\n",
+    "print(\"From 4 to the end:\", rank_1_tensor[4:].numpy())\n",
+    "print(\"From 2, before 7:\", rank_1_tensor[2:7].numpy())\n",
+    "print(\"Every other item:\", rank_1_tensor[::2].numpy())\n",
+    "print(\"Reversed:\", rank_1_tensor[::-1].numpy())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "positive-maker",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"karine alla en irak\"[::-1].replace(\" \",\"\") == \"karine alla en irak\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "unsigned-remains",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'kari ne alla enirak'"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"karine alla en irak\"[::-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "expanded-minnesota",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
