--- a/broadcasting.ipynb
+++ b/broadcasting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "smaller-spare",
+   "id": "tested-respect",
    "metadata": {},
    "source": [
     "# **Broadcasting**\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abroad-storm",
+   "id": "focused-enclosure",
    "metadata": {},
    "source": [
     "## **Introducing broadcasting**\n",
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "committed-superior",
+   "id": "general-emission",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "injured-bones",
+   "id": "statistical-terrorism",
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "lovely-posting",
+   "id": "proper-consequence",
    "metadata": {},
    "source": [
     "Broadcasting allows these types of binary operations to be performed on arrays of different sizes - for example adding a scalar (a 0-dimensional array) to an array"
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "promotional-housing",
+   "id": "subtle-iceland",
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "running-arbor",
+   "id": "other-blackjack",
    "metadata": {},
    "source": [
     "We can think of this as an operation that stretches or duplicates the value `5` into the array `[5, 5, 5]` and adds the results. The advantage of NumPy broadcasting is that this duplication of values does not actually take place, but it is a useful mental model as we think about broadcasting.\n",
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "altered-official",
+   "id": "controlling-promotion",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "mineral-departure",
+   "id": "wireless-needle",
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "collect-mongolia",
+   "id": "lightweight-degree",
    "metadata": {},
    "source": [
     "Here the one dimensional array `a` is stretched, or broadcast across the second dimension in order to match the shape of `M`. While these examples are relatively easy to understand, more complicated cases can involve broadcasting of both arrays. Consider the following example:"
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "final-commonwealth",
+   "id": "fossil-moisture",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "representative-reaction",
+   "id": "stable-musical",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "moved-ending",
+   "id": "resistant-province",
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "composite-namibia",
+   "id": "southeast-security",
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "under-liabilities",
+   "id": "automated-charity",
    "metadata": {},
    "source": [
     "Just as before, we stretched or broadcasted one value to match the shape of the other. Here we've stretched *both* `a` and `b` to match a common shape, and the result is a two-dimensional array!\n",
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "successful-scheme",
+   "id": "broadband-shopper",
    "metadata": {},
    "source": [
     "## **Rules of broadcasting**\n",
@@ -258,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "needed-multimedia",
+   "id": "accessible-bullet",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "greenhouse-times",
+   "id": "similar-september",
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "documentary-psychiatry",
+   "id": "desperate-cleaners",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "trained-headquarters",
+   "id": "every-effects",
    "metadata": {},
    "source": [
     "Let's consider an op on these two arrays. The shapes of the arrays are\n",
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "seasonal-procurement",
+   "id": "black-tuesday",
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "leading-completion",
+   "id": "ideal-orientation",
    "metadata": {},
    "source": [
     "### **Broadcasting example 2**\n",
@@ -364,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "visible-deadline",
+   "id": "progressive-fancy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "mediterranean-appreciation",
+   "id": "blank-adobe",
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "incoming-functionality",
+   "id": "royal-allah",
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "funded-control",
+   "id": "failing-level",
    "metadata": {},
    "source": [
     "Again, we'll start by writing out the shapes of the arrays:\n",
@@ -439,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "turkish-wealth",
+   "id": "breathing-worcester",
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "baking-error",
+   "id": "binding-wrapping",
    "metadata": {},
    "source": [
     "### **Broadcasting example 3**\n",
@@ -472,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "consistent-memory",
+   "id": "liked-director",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "linear-kennedy",
+   "id": "administrative-breed",
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "opening-methodology",
+   "id": "essential-property",
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "protected-location",
+   "id": "composite-shirt",
    "metadata": {},
    "source": [
     "This is just a slightly different situation than in the first example: the matrix `M` is transposed. How does this affect the calculation ? The shape of the arrays are \n",
@@ -547,7 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "middle-collection",
+   "id": "normal-accommodation",
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "impaired-patent",
+   "id": "crude-exclusive",
    "metadata": {},
    "source": [
     "Note the potential confusion here: you could imagine `a` and `M` compatible by padding `a` shape with ones on the right rather than on the left. But this is not how broadcasting rules work! That sort of flexibility might be useful in some cases, but it would lead to potential areas of ambiguity. If right-side padding is what you'd like, you can do this explicitly by reshaping the array (using `np.newaxis`)."
@@ -577,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "contemporary-average",
+   "id": "express-occasion",
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +598,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "handled-telescope",
+   "id": "preceding-malta",
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "express-parameter",
+   "id": "random-monday",
    "metadata": {},
    "source": [
     "Also note that while we've been focusing on the `+` operator here, these broadcasting rules apply to *any* binary `ufunc`. For example, here is the `logaddexp(a, b)` function, which computes `log(exp(a) + exp(b))` with more precision than the naive approach:"
@@ -629,7 +629,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "pregnant-matthew",
+   "id": "worth-simulation",
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "regular-society",
+   "id": "limited-constraint",
    "metadata": {},
    "source": [
     "## **Broadcasting in practice**\n",
@@ -665,22 +665,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "pursuant-concert",
+   "execution_count": 48,
+   "id": "covered-winning",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.29847431, 0.03397045, 0.1675035 ],\n",
+       "       [0.55778792, 0.28011893, 0.93670019],\n",
+       "       [0.09351166, 0.78491466, 0.33911991],\n",
+       "       [0.72387173, 0.52905176, 0.89376664],\n",
+       "       [0.94759584, 0.99138359, 0.36769007],\n",
+       "       [0.25523003, 0.09133683, 0.63431371],\n",
+       "       [0.68741668, 0.18864808, 0.4190478 ],\n",
+       "       [0.85831013, 0.32986121, 0.25730015],\n",
+       "       [0.98010224, 0.45538433, 0.57782314],\n",
+       "       [0.44456841, 0.24191815, 0.65161778]])"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "X = np.random.random((10,3))\n",
     "X"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "original-tyler",
+   "metadata": {},
+   "source": [
+    "We can compute the mean of each feature using the mean aggregate across the first dimension:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "excess-terrain",
+   "execution_count": 50,
+   "id": "local-crack",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.58468689, 0.3926588 , 0.52448829])"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_mean = X.mean(0)\n",
+    "X_mean"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "million-tennessee",
+   "metadata": {},
+   "source": [
+    "And now we can center `X` by subtracting its mean (this is a broadcasting op):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "prime-superior",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X_centered = X - X_mean\n",
+    "X_centered"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "short-statistics",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "T"
+   ]
   }
  ],
  "metadata": {
